--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ httpx = "^0.25.2"
 transformers = "^4.53.2"
 langdetect = "^1.0.9"
 torch = "^2.7.1"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.3.0"
